--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,5 +1,5 @@
-<div class="news">
-  <h2>news</h2>
+<div class="info-list">
+  <h3>News</h3>
   {% if site.news  %}
     <div class="table-responsive">
       <table class="table table-sm table-borderless">
