--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,19 @@
 <header>
 
-    <!-- Nav Bar -->
+<!-- Nav Bar -->
     <nav id="navbar" class="navbar navbar-light bg-white navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
     <div class="container">
-      {% if page.title != "about" %}
+      
+<!--       {% if page.title != "about" %}
         {% assign name = site.title | split: ' ' %}
         <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/"><span class="font-weight-bold">{{ name | first }}</span> {{ name | last }}</a>
       {% elsif site.show_social_icons %}
-        <!-- Social Icons -->
+        
         <div class="row ml-1 ml-sm-0">
           {% include social.html %}
         </div>
-      {% endif %}
+      {% endif %} -->
+    
       <!-- Navbar Toogle -->
       <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -19,45 +21,60 @@
         <span class="icon-bar middle-bar"></span>
         <span class="icon-bar bottom-bar"></span>
       </button>
-      <div class="collapse navbar-collapse text-right" id="navbarNav">
-        <ul class="navbar-nav ml-auto flex-nowrap">
-          <!-- About -->
-          <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/' | relative_url }}">
-              about
-              {% if page.title == "about" %}
-                <span class="sr-only">(current)</span>
-              {% endif %}
-            </a>
-          </li>
-          {% if site.blog_name %}
-          <!-- Blog -->
-          <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/blog/' | relative_url }}">
-              blog
-              {% if page.title == "blog" %}
-              <span class="sr-only">(current)</span>
-              {% endif %}
-            </a>
-          </li>
-          {% endif %}
-          <!-- Other pages -->
-          {% assign sorted_pages = site.pages | sort: "title" %}
-          {% for p in sorted_pages %}
-          {% if p.nav and p.autogen == nil %}
-          <li class="nav-item {% if page.title == p.title %}active{% endif %}">
-              <a class="nav-link" href="{{ p.url | relative_url }}">
-                {{ p.title }}
-                {% if page.title == p.title %}
+      <!-- <a class="scroll-top navbar-brand" href="http://www.cs.cmu.edu/~junjieh/"><b>Junjie Hu</b></a> -->
+
+      <div id="navbarNav" class="collapse navbar-collapse">
+        <!-- <ul class="navbar-nav ml-auto flex-nowrap"> -->
+        <ul class="nav navbar-nav">
+
+          {% if site.single_page %}
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#teaching">Teaching</a></li>
+            <li><a href="#talks">Talks</a></li>
+            <li><a href="#awards">Awards</a></li>
+
+          {% else %}
+            <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
+              <a class="nav-link" href="{{ '/' | relative_url }}">
+                about
+                {% if page.title == "about" %}
+                  <span class="sr-only">(current)</span>
+                {% endif %}
+              </a>
+            </li>
+            {% if site.blog_name %}
+            <!-- Blog -->
+            <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
+              <a class="nav-link" href="{{ '/blog/' | relative_url }}">
+                blog
+                {% if page.title == "blog" %}
                 <span class="sr-only">(current)</span>
                 {% endif %}
               </a>
-          </li>
+            </li>
+            {% endif %}
+            <!-- Other pages -->
+            {% assign sorted_pages = site.pages | sort: "title" %}
+            {% for p in sorted_pages %}
+            {% if p.nav and p.autogen == nil %}
+            <li class="nav-item {% if page.title == p.title %}active{% endif %}">
+                <a class="nav-link" href="{{ p.url | relative_url }}">
+                  {{ p.title }}
+                  {% if page.title == p.title %}
+                  <span class="sr-only">(current)</span>
+                  {% endif %}
+                </a>
+            </li>
+            {% endif %}
+            {% endfor %}
           {% endif %}
-          {% endfor %}
         </ul>
+        {% include social.html %}
       </div>
+
     </div>
   </nav>
+    
+
 
 </header>
