--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,4 +1,6 @@
-<span class="contact-icon text-center">
+
+<!-- <span class="contact-icon text-center"> -->
+<!-- <ul class="nav navbar-nav navbar-right">
   <a href="mailto:{{ site.email | encode_email }}"><i class="fas fa-envelope"></i></a>
   {% if site.orcid_id %}<a href="https://orcid.org/{{ site.orcid_id }}" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>{% endif %}
   {% if site.scholar_userid %}<a href="https://scholar.google.com/citations?user={{ site.scholar_userid }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>{% endif %}
@@ -11,4 +13,15 @@
   {% if site.quora_username %}<a href="https://www.quora.com/profile/{{ site.quora_username }}" target="_blank" title="Quora"><i class="fab fa-quora"></i></a>{% endif %}
   {% if site.blogger_url %}<a href="{{ site.blogger_url }}" target="_blank" title="Blogger"><i class="fab fa-blogger-b"></i></a>{% endif %}
   {% if site.strava_userid %}<a href="https://www.strava.com/athletes/{{ site.strava_userid }}" target="_blank" title="Strava"><i class="fab fa-strava"></i></a>{% endif %}
-</span>
+</ul>  -->
+<!-- </span> -->
+
+
+<ul class="nav navbar-nav" id="social">
+  <li><a href="https://github.com/{{ site.github_username }}"><i class="fab fa-github fa-1x"></i></a></li>
+  <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fab fa-linkedin fa-1x"></i></a></li>
+  <li><a href="https://scholar.google.com/citations?user={{ site.scholar_userid }}"><i class="fab fa-google fa-1x"></i></a></li>
+  <li><a href="https://www.facebook.com/{{ site.facebook_username }}"><i class="fab fa-facebook fa-1x"></i></a></li>
+  <li><a href="https://twitter.com/{{ site.twitter_username }}"><i class="fab fa-twitter fa-1x"></i></a></li>
+  <li class="divider vertical"></li>
+</ul>
