--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,39 +6,49 @@ layout: default
 
   <header class="post-header">
     {% assign name = site.title | split: ' ' %}
-    <h1 class="post-title"><span class="font-weight-bold">{{ name | first }}</span> {{ name | last }}</h1>
-    <p class="post-description">{{ page.description }}</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h1 class="post-title"><span class="font-weight-bold">{{ name | first }} {{ name | last }} | {{ site.chinese_name }} </span> </h1>
+                <address>
+                    {{ page.profile.address}}
+                </address>
+            </div>
+            <div class="col-md-4 profile">
+                <br>
+                <img src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
+            </div>
+        </div>
+    </div>
+
   </header>
 
   <article>
-    <div class="row">
-      <div class="col">
-        {{ content }}
-      </div>
-        {% if page.profile %}
-        <div class="profile col-4 {% if page.profile.align == 'left' %}order-first{% endif %}">
-          {% if page.profile.image %}
-            <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
-          {% endif %}
-          {% if page.profile.address %}
-            <div class="address">
-              {{ page.profile.address }}
-            </div>
-          {% endif %}
-        </div>
-        {% endif %}
+
+<!--     <span id="bio" name="bio">
+        
+    </span> -->
+    <div class="info-list">
+      <h3>About Me</h3>
     </div>
+    <table class="table table-hover">
+        <td>
+            {{ content }}
+        </td>
+    </table>
+
 
     {% if page.news %}
       {% include news.html %}
     {% endif %}
 
-    {% if page.social %}
-    <div class="social">
-      {% include social.html %}
-      <div class="contact-note">{{ site.contact_note }}</div>
-    </div>
+    {% if site.single_page %}
+      {% include publications.html %}
+      {% include teaching.html %}
+      {% include talks.html %}
+      {% include awards.html %}
     {% endif %}
+
   </article>
 
 </div>
