--- a/_includes/awards.html
+++ b/_includes/awards.html
@@ -1,8 +1,13 @@
 
 <div class="info-list">
-  <h3 id="awards" name="awards">Selected Awards</h3>
+  <h3 id="awards" name="awards">Selected Awards and Scholarships</h3>
   <ul>
+  	<li><p>CMU Graduate Student Assembly Dissertation Writing Group Grant, 2020</p></li>
+  	<li><p>CMU Graduate Student Assembly Conference Travel Grant, 2020</p></li>
+  	<li><p>NAACL 2019 Best Demonstration Paper Nomination, 2019</p></li>
+    <li><p>Graduate Research Scholarship, Carnegie Mellon University, 2015-2021</p></li>
     <li><p>Postgraduate Scholarship, The Chinese University of Hong Kong, 2013-2015</p></li>
+    <li><p>Certificate of Merit for Teaching Assistantship, Department of CSE, Chinese University of Hong Kong, 2013-2014</p></li>
     <li><p>IBM Outstanding Student Scholarship (1 of 77 winners in China), 2012-2013</p></li>
     <li><p>Outstanding Undergraduate Awards by China Computer Federation (99 winners), 2012-2013</p></li>
     <li><p>National Scholarship, the Ministry of Education, 2010-2011, 2011-2012</p></li>
