--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -88,6 +88,9 @@
     {% if entry.code %}
       [<a href="{{ entry.code }}" target="_blank">Code</a>]
     {% endif %}
+    {% if entry.award %}
+      [<a style="color:#bb0000;"><strong>{{ entry.award }}</strong></a>]
+    {% endif %}
     </span>
 
     <!-- Hidden abstract block -->
