--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -1,6 +1,11 @@
 <div class="info-list">
   <h3 id="talks" name="talks">Talks</h3>
   <ul>
+    <li><p>Invited Talk at Bay Area NLP Seminar, November 18, 2021.</p></li>
+    <li><p>Invited Talk at ICTR Seminar at UW-Madison, October 26, 2021.</p></li>
+    <li><p>Invited Talk at Microsoft Research Summit, October 21, 2021.</p></li>
+    <li><p>Invited Talk at CIBM Seminar at UW-Madison, October 19, 2021.</p></li>
+    <li><p>Invited Talk at IFDS Ideas Forum at UW-Madison, October 11, 2021.</p></li>
     <li><p>XTREME: A Massively Multilingual Multi-task Benchmarkfor Evaluating Cross-lingual Generalization, Junjie Hu, LTI Summer Seminar Series at Carnegie Mellon University, Pittsburgh, July 2, 2020.</p></li>
     <li><p>Pre-training of Multilingual Encoder for Crosslingual Transfer, Junjie Hu, Google Translate Team, Mountain View, August 20 2019.</p></li>
     <li><p><a href="http://www.cs.cmu.edu/~aiseminar/abstract/19-04-30.html">Cross-Lingual and Cross Domain Transfer for Neural Machine Translation</a>, Junjie Hu, AI Seminar at Carnegie Mellon University, Pittsburgh April 30 2019.</p></li>
