--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -29,7 +29,7 @@ layout: default
         
     </span> -->
     <div class="info-list">
-      <h3>About Me</h3>
+      <h3>About</h3>
     </div>
     <table class="table table-hover">
         <td>
