--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -1,7 +1,8 @@
 <div class="info-list">
   <h3 id="talks" name="talks">Talks</h3>
   <ul>
-    <li><p>Invited Talk at Bay Area NLP Seminar, November 18, 2021.</p></li>
+    <li><p>Invited Talk at <a href="https://www.microsoft.com/en-us/research/group/cognitive-services-research/talks/">Microsoft Azure Cognitive Services Research</a>, January 20, 2022.</p></li>
+    <li><p>Invited Talk at <a href="https://www.meetup.com/Bay-Area-NLP/events/281277123/">Bay Area NLP Seminar</a>, November 18, 2021.</p></li>
     <li><p>Invited Talk at ICTR Seminar at UW-Madison, October 26, 2021.</p></li>
     <li><p>Invited Talk at Microsoft Research Summit, October 21, 2021.</p></li>
     <li><p>Invited Talk at CIBM Seminar at UW-Madison, October 19, 2021.</p></li>
