--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -43,6 +43,7 @@ layout: default
     {% endif %}
 
     {% if site.single_page %}
+      {% include group.html %}
       {% include publications.html %}
       {% include teaching.html %}
       {% include talks.html %}
