--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
         <ul class="nav navbar-nav">
 
           {% if site.single_page %}
-            <li><a href="#group">Group</a></li>
+            <!-- <li><a href="#group">Group</a></li> -->
             <li><a href="#publications">Publications</a></li>
             <li><a href="#teaching">Teaching</a></li>
             <li><a href="#talks">Talks</a></li>
