--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -47,7 +47,7 @@ layout: default
       {% include publications.html %}
       {% include teaching.html %}
       {% include talks.html %}
-      {% include awards.html %}
+    <!--   {% include awards.html %} -->
     {% endif %}
 
   </article>
