--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -43,11 +43,11 @@ layout: default
     {% endif %}
 
     {% if site.single_page %}
-      {% include group.html %}
+      <!-- {% include group.html %} -->
       {% include publications.html %}
       {% include teaching.html %}
       {% include talks.html %}
-    <!--   {% include awards.html %} -->
+      {% include awards.html %}
     {% endif %}
 
   </article>
