--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -1,6 +1,8 @@
 <div class="info-list">
   <h3 id="talks" name="talks">Talks</h3>
   <ul>
+    <li><p>Invited Talk at <a href="https://talks.cam.ac.uk/talk/index/175475">University of Cambridge, LTL Seminar</a>, June 09, 2022.</p></li>
+    <li><p>Invited Talk at <a href="https://langsci.wisc.edu/2022/03/07/linguistics-fridays-spring-2022-schedule/">Lingustics Fridays Seminar at UW-Madison</a>, April 01, 2022.</p></li>
     <li><p>Invited Talk at <a href="https://www.microsoft.com/en-us/research/group/cognitive-services-research/talks/">Microsoft Azure Cognitive Services Research</a>, January 20, 2022.</p></li>
     <li><p>Invited Talk at <a href="https://www.meetup.com/Bay-Area-NLP/events/281277123/">Bay Area NLP Seminar</a>, November 18, 2021.</p></li>
     <li><p>Invited Talk at ICTR Seminar at UW-Madison, October 26, 2021.</p></li>
