--- a/_includes/group.html
+++ b/_includes/group.html
@@ -1,6 +1,12 @@
 
 <div class="info-list">
   <h3 id="group" name="group">Research Group</h3>
+      <table class="table table-hover" style="font-size:80%">
+        <td>
+            <p>I am really fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p>
+
+
+  <!-- <p>I am fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p> -->
   Graduate Students
   <ul>
     <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS) </p></li>
@@ -17,5 +23,7 @@
     <li><p><a href="https://github.com/sleepope">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
     <li><p>Jiayuan Rao (Exchange student from SJTU) </p></li>
   </ul>
+          </td>
+    </table>
 </div>
 
