--- a/_includes/group.html
+++ b/_includes/group.html
@@ -14,11 +14,11 @@
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (Research MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (Research MS in ECE) </p></li>
-    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math) </p></li>
+    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon AWS) </p></li>
   </ul>
   Undergraduate Students
   <ul>
-    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BA in CS/Math, next PhD in CS at Purdue) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BA in CS/Math -> PhD in CS at Purdue) </p></li>
     <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BA in CS/Math) </p></li>
     <li><p><a href="https://github.com/sleepope">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
     <li><p>Jiayuan Rao (Exchange student from SJTU) </p></li>
