--- a/_includes/group.html
+++ b/_includes/group.html
@@ -3,7 +3,7 @@
   <h3 id="group" name="group">Research Group</h3>
       <table class="table table-hover" style="font-size:80%">
         <td>
-            <p>I am really fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p>
+            <p>I am really fortunate to work with a group of excellent students at UW-Madison. Stay tuned for our latest works! </p>
 
 
   <!-- <p>I am fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p> -->
