--- a/_includes/group.html
+++ b/_includes/group.html
@@ -18,8 +18,8 @@
   </ul>
   Undergraduate Students
   <ul>
-    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BA in CS/Math -> PhD in CS at Purdue) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BA in CS/Math) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math -> PhD in CS at Purdue) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BS in CS/Math) </p></li>
     <li><p><a href="https://github.com/sleepope">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
     <li><p>Jiayuan Rao (Exchange student from SJTU) </p></li>
   </ul>
