--- a/_includes/group.html
+++ b/_includes/group.html
@@ -14,7 +14,7 @@
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (Research MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (Research MS in ECE) </p></li>
-    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon AWS) </p></li>
+    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon Alexa) </p></li>
   </ul>
   Undergraduate Students
   <ul>
