--- a/_includes/group.html
+++ b/_includes/group.html
@@ -20,7 +20,7 @@
   <ul>
     <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math -> PhD in CS at Purdue) </p></li>
     <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BS in CS/Math) </p></li>
-    <li><p><a href="https://github.com/sleepope">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
+    <li><p><a href="https://shunchizhang.github.io/">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
     <li><p>Jiayuan Rao (Exchange student from SJTU) </p></li>
   </ul>
           </td>
