--- a/_includes/group.html
+++ b/_includes/group.html
@@ -21,7 +21,7 @@
     <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math -> PhD in CS at Purdue) </p></li>
     <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BS in CS/Math) </p></li>
     <li><p><a href="https://shunchizhang.github.io/">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
-    <li><p>Jiayuan Rao (Exchange student from SJTU) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/%E7%8F%88%E6%BA%90-%E9%A5%B6-a39840218/">Jiayuan Rao<a/> (Exchange student from SJTU) </p></li>
   </ul>
           </td>
     </table>
