--- a/_includes/group.html
+++ b/_includes/group.html
@@ -9,7 +9,7 @@
   <!-- <p>I am fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p> -->
   Graduate Students
   <ul>
-    <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS) </p></li>
+    <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS, co-advised w/ <a href="https://pages.cs.wisc.edu/~sharonli/">Sharon Li</a>) </p></li>
     <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (Research MS in CS) </p></li>
