--- a/_includes/group.html
+++ b/_includes/group.html
@@ -12,16 +12,19 @@
     <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS, co-advised w/ <a href="https://pages.cs.wisc.edu/~sharonli/">Sharon Li</a>) </p></li>
     <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
+    <li><p>Yuye Jiang (PhD in CS) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (Research MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (Research MS in ECE) </p></li>
-    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon Alexa) </p></li>
   </ul>
   Undergraduate Students
   <ul>
-    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math -> PhD in CS at Purdue) </p></li>
     <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BS in CS/Math) </p></li>
     <li><p><a href="https://shunchizhang.github.io/">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/%E7%8F%88%E6%BA%90-%E9%A5%B6-a39840218/">Jiayuan Rao<a/> (Exchange student from SJTU) </p></li>
+  </ul>
+  Alumni
+  <ul>
+    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon Alexa) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math -> PhD in CS at Purdue) </p></li>
   </ul>
           </td>
     </table>
