--- a/_includes/group.html
+++ b/_includes/group.html
@@ -13,8 +13,8 @@
     <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
     <li><p>Yuye Jiang (PhD in CS) </p></li>
-    <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (Research MS in CS) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (Research MS in ECE) </p></li>
+    <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (MS in CS) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE) </p></li>
   </ul>
   Undergraduate Students
   <ul>
