--- a/_includes/group.html
+++ b/_includes/group.html
@@ -13,6 +13,7 @@
     <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
     <li><p>Yuye Jiang (PhD in CS) </p></li>
+    <li><p>Ruixue Lian (PhD in ECE, co-advised w/ <a href="https://sethares.engr.wisc.edu/">William Sethares</a>) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE) </p></li>
   </ul>
