--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -4,7 +4,7 @@
   <ul>
     <li><p><a href="https://junjiehu.github.io/cs769-spring22/">CS 769 Advanced Natural Language Processing (Spring 2022)</a> </p></li>
     <li><p><a href="https://junjiehu.github.io/cs769-spring23/">CS 769 Advanced Natural Language Processing (Spring 2023)</a> </p></li>
-    <li><p>CS 769 Advanced Natural Language Processing (Fall 2023)</a> </p></li>
+    <li><p><a href="https://junjiehu.github.io/cs769-fall23/">CS 769 Advanced Natural Language Processing (Fall 2023)</a> </p></li>
     <!-- <li><p>Guest Lecture on Machine Translation in 11-411/611 Natural Language Processing, 2020 Spring, 2019 Spring, 2018 Fall.</p></li>
     <li><p>Guest Lecture on Multi-task Multi-lingual Learning Models in 11-747 Neural Networks for NLP, 2018 Spring.</p></li>
     <li><p>Teaching Assistant in 11-747 Neural Networks for NLP, 2018 Spring.</p></li>
