--- a/_includes/group.html
+++ b/_includes/group.html
@@ -9,13 +9,14 @@
   <!-- <p>I am fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p> -->
   Graduate Students
   <ul>
-    <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS, co-advised w/ <a href="https://pages.cs.wisc.edu/~sharonli/">Prof. Sharon Li</a>) </p></li>
+    <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
     <li><p>Yuye Jiang (PhD in CS) </p></li>
-    <li><p>Ruixue Lian (PhD in ECE, co-advised w/ <a href="https://sethares.engr.wisc.edu/">Prof. William Sethares</a>) </p></li>
+    <li><p><a href="https://bigbinnie.github.io/">Binwei Yao</a> (PhD in CS) </p></li>
+    <li><p><a href="https://scholar.google.com/citations?user=jtPcOzUAAAAJ&hl=en">Zhiwei Song</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE) </p></li>
-    <li><p>Karthik Suresh (MS in CS) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/karthik-suresh-3240/">Karthik Suresh</a> (MS in CS) </p></li>
     <li><p>Shan Leng (MS in Stats) </p></li>
   </ul>
   Undergraduate Students
@@ -24,6 +25,7 @@
   </ul>
   Alumni
   <ul>
+    <li><p>Ruixue Lian (PhD in ECE, co-advised w/ <a href="https://sethares.engr.wisc.edu/">Prof. William Sethares</a>, now at Amazon Alexa AI) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (MS in CS -> NVIDIA) </p></li>
     <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon Alexa) </p></li>
     <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math -> PhD in CS at Purdue) </p></li>
