--- a/_includes/group.html
+++ b/_includes/group.html
@@ -10,11 +10,10 @@
   Graduate Students
   <ul>
     <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (PhD in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
-    <li><p>Yuye Jiang (PhD in CS) </p></li>
     <li><p><a href="https://bigbinnie.github.io/">Binwei Yao</a> (PhD in CS) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=jtPcOzUAAAAJ&hl=en">Zhiwei Song</a> (PhD in CS) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE) </p></li>
     <li><p><a href="https://www.linkedin.com/in/karthik-suresh-3240/">Karthik Suresh</a> (MS in CS) </p></li>
     <li><p>Shan Leng (MS in Stats) </p></li>
@@ -25,6 +24,7 @@
   </ul>
   Alumni
   <ul>
+    <li><p>Yuye Jiang (MS in CS) </p></li>
     <li><p>Ruixue Lian (PhD in ECE, co-advised w/ <a href="https://sethares.engr.wisc.edu/">Prof. William Sethares</a>, now at Amazon Alexa AI) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (MS in CS -> NVIDIA) </p></li>
     <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon Alexa) </p></li>
