--- a/_includes/group.html
+++ b/_includes/group.html
@@ -17,13 +17,16 @@
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE) </p></li>
     <li><p><a href="https://www.linkedin.com/in/karthik-suresh-3240/">Karthik Suresh</a> (MS in CS) </p></li>
     <li><p>Shan Leng (MS in Stats) </p></li>
+<!--     <li><p>Tara Bobinac (MS in CS) </p></li>
+    <li><p>Himanshu Chaudhary (MS in CS) </p></li> -->
   </ul>
   Undergraduate Students
   <ul>
-    <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BS in CS/Math) </p></li>
+    <li><p>Agam Goyal (BS in CS) </p></li>
   </ul>
   Alumni
   <ul>
+    <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BS in ECE/Math -> MS in ECE) </p></li>
     <li><p>Ruixue Lian (PhD in ECE, co-advised w/ <a href="https://sethares.engr.wisc.edu/">Prof. William Sethares</a>, now at Amazon Alexa AI) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (MS in CS -> NVIDIA) </p></li>
     <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon Alexa) </p></li>
