--- a/_includes/group.html
+++ b/_includes/group.html
@@ -9,29 +9,34 @@
   <!-- <p>I am fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p> -->
   Graduate Students
   <ul>
-    <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS) </p></li>
-    <li><p><a href="https://bigbinnie.github.io/">Binwei Yao</a> (PhD in CS) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (MS in CS) </p></li>
-    <li><p>Yuye Jiang (MS in CS) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/karthik-suresh-3240/">Karthik Suresh</a> (MS in CS) </p></li>
-    <li><p>Shan Leng (MS in Stats) </p></li>
+    <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS, Spring 2022-) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS, Fall 2022-) </p></li>
+    <li><p><a href="https://bigbinnie.github.io/">Binwei Yao</a> (PhD in CS, Fall 2023-) </p></li>
+    <li><p><a href="https://scholar.google.com/citations?user=eyIrttAAAAAJ&hl=en">Zefan Cai</a> (PhD in CS, Fall 2024-) </p></li>
+    <li><p><a href="https://rickyskywalker.github.io/">Ruida Wang</a> (PhD in CS, Fall 2024-) </p></li>
 <!--     <li><p>Tara Bobinac (MS in CS) </p></li>
     <li><p>Himanshu Chaudhary (MS in CS) </p></li> -->
   </ul>
+  <!--
   Undergraduate Students
   <ul>
-    <li><p>Agam Goyal (BS in CS) </p></li>
+    <li><p>Agam Goyal (BS in CS, now PhD in CS at UIUC) </p></li>
   </ul>
+  -->
   Alumni
   <ul>
+    <li><p><a href="https://www.linkedin.com/in/karthik-suresh-3240/">Karthik Suresh</a> (MS in CS) </p></li>
+    <li><p>Shan Leng (MS in Stats, now PhD in BDS at UW-Madison) </p></li>
+    <li><p>Agam Goyal (BS in CS, now PhD in CS at UIUC) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE, now software engineer at Supernova Technology) </p></li>
+    <li><p>Yuye Jiang (MS in CS, now software engineer at Oracle) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/gowtham1/?originalSubdomain=in">Gowtham Ramesh</a> (MS in CS, now applied research scientist at AMD) </p></li>
     <li><p><a href="https://www.linkedin.com/in/jackcai1206/">Jack Ziyang Cai</a> (BS in ECE/Math -> MS in ECE) </p></li>
-    <li><p>Ruixue Lian (PhD in ECE, co-advised w/ <a href="https://sethares.engr.wisc.edu/">Prof. William Sethares</a>, now at Amazon Alexa AI) </p></li>
-    <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (MS in CS -> NVIDIA) </p></li>
-    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math -> Amazon Alexa) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math -> PhD in CS at Purdue) </p></li>
-    <li><p><a href="https://shunchizhang.github.io/">Shunchi Zhang</a> (Exchange student from XJTU) </p></li>
+    <li><p>Ruixue Lian (PhD in ECE, co-advised w/ <a href="https://sethares.engr.wisc.edu/">Prof. William Sethares</a>, now applied scientist at Amazon AWS) </p></li>
+    <li><p><a href="https://scholar.google.com/citations?user=1BGJ0YMAAAAJ&hl=en">Makesh Narsimhan Sreedhar</a> (MS in CS, now research engineer at NVIDIA) </p></li>
+    <li><p><a href="https://github.com/Aurora-He">Shilu He</a> (MS in Math, now software engineer at Amazon Alexa) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/shanchao-liang-106480195/">Shanchao Liang</a> (BS in CS/Math, now PhD in CS at Purdue) </p></li>
+    <li><p><a href="https://shunchizhang.github.io/">Shunchi Zhang</a> (Exchange student from XJTU, now MS in CS at JHU) </p></li>
   </ul>
           </td>
     </table>
