--- a/_includes/group.html
+++ b/_includes/group.html
@@ -10,12 +10,12 @@
   Graduate Students
   <ul>
     <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS, Spring 2022-) </p></li>
-    <li><p><a href="https://www.linkedin.com/in/tim-ossowski-bb07a0171/">Tim Ossowski</a> (PhD in CS, Fall 2022-) </p></li>
+    <li><p><a href="https://tossowski.github.io/website/">Tim Ossowski</a> (PhD in CS, Fall 2022-) </p></li>
     <li><p><a href="https://bigbinnie.github.io/">Binwei Yao</a> (PhD in CS, Fall 2023-) </p></li>
     <li><p><a href="https://scholar.google.com/citations?user=eyIrttAAAAAJ&hl=en">Zefan Cai</a> (PhD in CS, Fall 2024-) </p></li>
     <li><p><a href="https://github.com/Arist12">Yikai Zhang</a> (PhD in CS, Fall 2024-) </p></li> 
     <li><p>Tara Bobinac (MS in CS) </p></li>
-    <!--<li><p>Himanshu Chaudhary (MS in CS) </p></li> -->
+    <li><p>Himanshu Chaudhary (MS in CS) </p></li>
   </ul>
   <!--
   Undergraduate Students
