--- a/_includes/group.html
+++ b/_includes/group.html
@@ -22,10 +22,10 @@
   -->
   Alumni
   <ul>
+    <li><p><a href="https://www.linkedin.com/in/himanshu-chaudhary-929720147/">Himanshu Chaudhary</a> (MS in CS) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/tarabobinac/">Tara Bobinac</a> (MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/karthik-suresh-3240/">Karthik Suresh</a> (MS in CS) </p></li>
-    <li><p>Himanshu Chaudhary (MS in CS) </p></li>
-    <li><p>Tara Bobinac (MS in CS) </p></li>
-    <li><p>Shan Leng (MS in Stats, now PhD in BDS at UW-Madison) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/shan-leng-025206256/">Shan Leng</a> (MS in Stats, now PhD in BDS at UW-Madison) </p></li>
     <li><p><a href="https://agoyal0512.github.io/">Agam Goyal</a> (BS in CS, now PhD in CS at UIUC) </p></li>
     <li><p><a href="https://www.linkedin.com/in/samarth-mathur1/">Samarth Mathur</a> (MS in ECE, now software engineer at Supernova Technology) </p></li>
     <li><p><a href="https://www.linkedin.com/in/yuye-jiang-xx/">Yuye Jiang</a> (MS in CS, now software engineer at Oracle) </p></li>
