--- a/_includes/group.html
+++ b/_includes/group.html
@@ -12,7 +12,8 @@
     <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS, Spring 2022-) </p></li>
     <li><p><a href="https://tossowski.github.io/website/">Tim Ossowski</a> (PhD in CS, Fall 2022-) </p></li>
     <li><p><a href="https://bigbinnie.github.io/">Binwei Yao</a> (PhD in CS, Fall 2023-) </p></li>
-    <li><p><a href="https://scholar.google.com/citations?user=eyIrttAAAAAJ&hl=en">Zefan Cai</a> (PhD in CS, Fall 2024-) </p></li>
+    <li><p><a href="https://zefan-cai.github.io/">Zefan Cai</a> (PhD in CS, Fall 2024-) </p></li>
+    <li><p><a href="https://ikakkar03.github.io/">Ishita Kakkar</a> (PhD in CS, Fall 2025-) </p></li>
   </ul>
   <!--
   Undergraduate Students
