--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -2,6 +2,7 @@
 <div class="info-list">
   <h3 id="teaching" name="teaching">Teaching</h3>
   <ul>
+    <li><p><a href="https://junjiehu.github.io/cs769-fall25/">CS 769 Advanced Natural Language Processing (Fall 2025)</a> </p></li>
     <li><p><a href="https://junjiehu.github.io/cs769-fall24/">CS 769 Advanced Natural Language Processing (Fall 2024)</a> </p></li>
     <li><p><a href="https://junjiehu.github.io/cs769-fall23/">CS 769 Advanced Natural Language Processing (Fall 2023)</a> </p></li>
     <li><p><a href="https://junjiehu.github.io/cs769-spring23/">CS 769 Advanced Natural Language Processing (Spring 2023)</a> </p></li>
