--- a/_includes/group.html
+++ b/_includes/group.html
@@ -5,8 +5,6 @@
         <td>
             <p>I am really fortunate to work with a group of excellent students at UW-Madison. Stay tuned for our latest works! </p>
 
-
-  <!-- <p>I am fortunate to work with a group of excellent students at UW-Madison. Stay tuned on our latest works! </p> -->
   Graduate Students
   <ul>
     <li><p><a href="https://uppaal.github.io/">Rheeya Uppaal</a> (PhD in CS, Spring 2022-) </p></li>
@@ -27,7 +25,7 @@
   
   Alumni
   <ul>
-    <li><p><a href="https://www.linkedin.com/in/himanshu-chaudhary-929720147/">Himanshu Chaudhary</a> (MS in CS) </p></li>
+    <li><p><a href="https://www.linkedin.com/in/himanshu-chaudhary-929720147/">Himanshu Chaudhary</a> (MS in CS, now software engineer at Paypal) </p></li>
     <li><p><a href="https://www.linkedin.com/in/tarabobinac/">Tara Bobinac</a> (MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/karthik-suresh-3240/">Karthik Suresh</a> (MS in CS) </p></li>
     <li><p><a href="https://www.linkedin.com/in/shan-leng-025206256/">Shan Leng</a> (MS in Stats, now PhD in BDS at UW-Madison) </p></li>
